[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "ops"
path = "src/ops.rs"

[dependencies]
acme-rfc8555 = { version = "0.2.0", default-features = false, features = [] }
email_address = { version = "0.2.9", default-features = false, features = [] }
httparse = { version = "1.10.1", default-features = false, features = [] }
otp-auth = { version = "0.1.0", default-features = false, features = [] }
phonenumber = { version = "0.3.9", default-features = false, features = [] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "default-tls"] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "aws-lc-rs"] }
rustls-pki-types = { version = "1.14.0", default-features = false, features = [] }
serde_json = { version = "1.0.149", default-features = false, features = [] }
tungstenite = { version = "0.28.0", default-features = false, features = ["httparse"] }
url = { version = "2.5.8", default-features = false, features = [] }
