[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "ops"
path = "src/ops.rs"

[dependencies]
acme-micro = { version = "0.13.0", default-features = false, features = [] }
anyhow = { version = "1.0.101", default-features = false, features = [] }
email_address = { version = "0.2.9", default-features = false, features = [] }
httparse = { version = "1.10.1", default-features = false, features = [] }
log = { version = "0.4.29", default-features = false, features = [] }
otp-auth = { version = "0.1.0", default-features = false, features = [] }
phonenumber = { version = "0.3.9", default-features = false, features = [] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "aws-lc-rs"] }
rustls-pki-types = { version = "1.14.0", default-features = false, features = [] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
simple_logger = { version = "5.1.0", default-features = false, features = ["colors", "timestamps" ] }
tungstenite = { version = "0.28.0", default-features = false, features = ["httparse"] }
ureq = { version = "3.2.0", default-features = false, features = ["json", "rustls"] }
url = { version = "2.5.8", default-features = false, features = [] }
